# astro-reason

./: README.md  README_zh.md  pyproject.toml
.github/workflows/: benchmark-repro.yml  brahe-skill-sync.yml  ci.yml  i18n-sync.yml  runtime-build.yml  sync-datasets.yml
benchmarks/: finished_benchmarks.json
benchmarks/aeossp_standard/: README.md
benchmarks/regional_coverage/: README.md  splits.yaml
benchmarks/relay_constellation/: README.md  splits.yaml
benchmarks/revisit_constellation/: README.md  splits.yaml
benchmarks/satnet/: README.md  generator.py
benchmarks/spot5/: README.md  generator.py  splits.yaml
benchmarks/stereo_imaging/: README.md  splits.yaml
docs/: benchmark_contract.md  solver_contract.md
experiments/difficulty_ablation/: README.md  __init__.py  aggregate.py  run.py
experiments/harness_ablation/: README.md  __init__.py  aggregate.py  run.py
experiments/main_agentic/: README.md  plan.py  run.py
experiments/main_solver/: README.md  aggregate.py  config.yaml  config_regional_coverage_cp_local_search_ci_smoke.yaml  config_regional_coverage_cp_local_search_comparison.yaml  config_regional_coverage_cp_local_search_faithful.yaml  config_regional_coverage_cp_local_search_reproduction.yaml  run.py
experiments/verifier_exposure/: run.py
runtimes/base/: Dockerfile
scripts/: DATASET_CARD.md  discover_runtime_matrix.py  validate_solver_contract.py
solvers/: finished_solvers.json
tests/: test_runtime_discovery.py  test_solver_contract_scripts.py
tests/benchmarks/: test_aeossp_standard_verifier.py  test_regional_coverage_generator.py  (+13 more)
(+346 files in other folders)
