[project]
name = "astroreasonbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brahe>=1.4.2",
    "datasets>=4.8.5",
    "huggingface-hub>=1.13.0",
    "kagglehub[pandas-datasets]>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "skyfield>=1.54",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "pyinstaller>=6.20.0",
]
